--- a/Signup.html
+++ b/Signup.html
@@ -4,7 +4,22 @@
     <title>Signup</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <script type="text/javascript">
+          function validate() {
+          var mobile = document.getElementById("mobile").value;
+          var pattern = /^(0|[+91]{3})?[7-9][0-9]{9}$/;
+          if (pattern.test(mobile)) {
+              alert("Your mobile number : "+mobile);
+              return true;
+          }
+          alert("It is not valid mobile number");
+          return false;
+          }
+    </script>
 </head>
+
+
+
 <body background="./images/creation.jpg">
   <div class="button">
     <ul class="nav justify-content-end bg-teal">
@@ -27,7 +42,7 @@
     <h4 id="sing">SIGN UP</h4>
     <br>
     <div id="form" class="col-lg-10">
-        <form name="myfrm" action="login.html" onsubmit="return validation()" class="row g-3" id="myform">
+        <form name="myfrm" action="login.html" onsubmit="return validate()" class="row g-3" id="myform">
             <div class="col-md-6">
               <label for="First name" class="form-label">First Name</label>
               <input type="text" class="form-control" id="inputname" required>
@@ -42,12 +57,12 @@
             </div>       
             <div class="col-12">
               <label for="Number" class="form-label">Number</label>
-              <input type="text" name="mobilenmbr" class="form-control" id="mobilenumber" placeholder="+91 999 234 4657" required>
+              <input type="text" name="mobile" class="form-control" id="mobile">
               <span id="messages2"></span>
             </div>
             <div class="col-md-12">
               <label for="inputpassword" class="form-label">Enter password</label>
-              <input type="password" class="form-control" id="inputpassword" placeholder="Enter password" required>
+              <input type="password" class="form-control" id="inputpassword" placeholder="Enter password"pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             </div>
             
             <div class="col-12">
@@ -59,12 +74,10 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit"  class="btn btn-primary">Sign in</button>
+              <button type="submit" onclick="return validate();" class="btn btn-primary">Sign in</button>
             </div>
           </form>
     </div>
-    <script src="hall.js">
-   
-    </script>
+    
 </body>
 </html>
